--- a/ChallengeApp/Info.plist
+++ b/ChallengeApp/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Will you allow acess to your camera?</string>
+	<string>Will you allow access to your camera?</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>Will you allow access to your photo library?</string>
 	<key>CFBundleDevelopmentRegion</key>
